Scrollbars and navbar padding fixed

--- a/src/site/styles/user/digital-garden-base.scss
+++ b/src/site/styles/user/digital-garden-base.scss
@@ -186,7 +186,7 @@ ul.task-list {
     max-width: calc(var(--nav-width) + var(--gap)* 2);
     margin: auto;
     position: fixed;
-    padding: 0px 12px;
+    padding: 5px 5px;
 
     @media (max-width: 800px) {
         h1 {
@@ -213,14 +213,14 @@ ul.task-list {
     }
 
     .search-button {
-        margin: 10px 35px 10px 25px;
+        margin: 10px 30px 10px 25px;
 
         @media (max-width: 800px) {
             margin: 10px 35px 10px 25px;
         }
 
         @media (max-width: 767px) {
-            margin: 10px 25px 10px 25px;
+            margin: 10px 15px 10px 25px;
         }
     }
 }
